# myRag

./: .env.example  .gitignore  PROJECT_STATUS.md  README.md  RETRIEVAL_SYSTEM.md  SETUP.md  pyproject.toml
benchmarks/: run_bench.py
config/: default.yaml
explaination/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  INDEXING_PIPELINE.md  MEMORY_OPTIMIZATION.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md
plan/: 00_MASTER_PLAN.md  01_system_overview.md  02_high_level_architecture.md  03_project_structure.md  04_file_responsibility_map.md  05_database_design.md  06_parser_design.md  07_chunking_strategy.md  08_lexical_search_engine.md  09_semantic_search_engine.md  10_graph_engine.md  11_intent_router.md  12_hybrid_retrieval_engine.md  13_context_builder.md  14_llm_layer.md  15_memory_optimization_plan.md  16_query_execution_walkthrough.md  17_extensibility_plan.md  18_mvp_roadmap.md  19_performance_strategy.md  20_final_recommendations.md  OVERALL_CONSOLIDATED_PLAN.md  OVERALL_PLAN.tex
plan/config/: configuration_reference.md
plan/interfaces/: api_reference.md  data_models.md
plan/pseudocode/: embedding_pipeline.md  graph_algorithms.md  indexing_and_retrieval.md
plan/schemas/: 001_initial_schema.sql  002_add_summaries.sql  003_add_cache.sql
plan/workflows/: data_flow_diagrams.md  intent_routing_flow.md  memory_architecture.md
scripts/: debug_route.py  reindex.py
scripts/diagnostics/: diag2.py  diag3.py  diag4.py  diag5.py  (+1 more)
src/: __init__.py  cli.py  config.py  utils.py  watcher.py
tests/: conftest.py
vscode-extension/: README.md  package.json
(+37 files in other folders)
