[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myrag"
version = "1.0.0"
description = "A memory-efficient local RAG system for Vite + React codebases"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-javascript>=0.21.0",
    "onnxruntime>=1.18.0",
    "tokenizers>=0.19.0",
    "numpy>=1.26.0",
    "watchdog>=4.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "psutil>=5.9.0",
    "huggingface_hub>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
reranker = [
    "sentence-transformers>=2.6.0",
]

[project.scripts]
myrag = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
